Final improvements on styling!

--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -48,7 +48,7 @@
 }
 
 * {
-  font-family: 'JetBrains Mono', monospace !important;
+  font-family: 'JetBrains Mono', monospace;
   font-family: 'Montserrat', sans-serif;
   font-family: 'Nunito Sans', sans-serif;
   font-family: 'Inter', sans-serif;
@@ -125,7 +125,7 @@ body[data-theme="dark"] {
 
 .nav-link.dark {
   color: var(--dark-font-secondary) !important;
-  font-size: 14px;
+  font-size: 14px !important;
   text-decoration: none;
   letter-spacing: 2px;
 }
@@ -146,7 +146,7 @@ body[data-theme="dark"] {
 
 .login-dark {
   color: var(--dark-font-secondary) !important;
-  font-size: 15px;
+  font-size: 14px !important;
   text-decoration: none;
   letter-spacing: 2px;
 }
@@ -167,7 +167,7 @@ body[data-theme="dark"] {
 
 .login-light {
   color: var(--bg-snow) !important;
-  font-size: 15px;
+  font-size: 14px !important;
   text-decoration: none;
   letter-spacing: 2px;
 }
@@ -188,7 +188,7 @@ body[data-theme="dark"] {
 
 .link {
   color: var(--font-secondary) !important;
-  font-size: 14px;
+  font-size: 14px !important;
   text-decoration: none;
   letter-spacing: 2px;
 }
@@ -463,8 +463,7 @@ li {
 .stripe-donate:active {
   display: flex;
   text-decoration: none;
-  background-color: var(--bg-snow) !important;
-  color: var(--brand-primary) !important;
+  color: var(--bg-snow) !important;
   justify-content: center;
   font-weight: bolder;
   border-radius: 10px;
